--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "uuid": "^13.0.0",
     "video.js": "^8.23.4"
   },
   "devDependencies": {
